--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Local .terraform directories
 **/.terraform/*
+**/.secret
 
 # .tfstate files
 *.tfstate
@@ -13,6 +14,8 @@ crash.log
 # version control.
 #
 # example.tfvars
+
+**/terraform.tfvars
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
